src/objects/Scorecard_Input_Sheet__c.object
<CustomObject>
    <description>Input sheet for vendors to enter operational measures. WR178.</description>
    <fields>
        <fullName>AHT_seconds__c</fullName>
        <inlineHelpText>In seconds. Calculation method: Include talk time, hold time, and ACW</inlineHelpText>
        <label>AHT (seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closing_Date_of_Scorecard__c</fullName>
        <description>Date of Scorecard</description>
        <inlineHelpText>Select the last day of the Month associated with the scorecard results</inlineHelpText>
        <label>Closing Date of Scorecard</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commentary__c</fullName>
        <description>Commentary to explain variance</description>
        <inlineHelpText>Enter any key points related to the scorecard results. These comments may be visible in any Scorecard related reports. Maximum of 4000 characters.</inlineHelpText>
        <label>Commentary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Volume_IVR__c</fullName>
        <inlineHelpText>Total number of automated, recorded informational messages heard by consumers during both operating and nonoperating hours (24 hours per day)</inlineHelpText>
        <label>Contact Volume - IVR (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Select a country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Service_Level__c</fullName>
        <inlineHelpText>Calculation method: Total number of emails answered within 2 business days (contact creation date vs.contact closing date) / total number of emails</inlineHelpText>
        <label>Email Service Level (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IVR_CX_Surveys_Offered_ASIA_only__c</fullName>
        <description>Used to determine how many IVRs were offered to calculate the response rate.</description>
        <inlineHelpText>Number of IVR CX surveys sent via the IVR tool in ASIA</inlineHelpText>
        <label>IVR CX Surveys Offered (ASIA only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Answer_Rate__c</fullName>
        <inlineHelpText>Calculation method: Total number of calls offered / Total number answered</inlineHelpText>
        <label>Phone Answer Rate (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Select the Region associated with the
Country</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMO__c</fullName>
        <description>Select the SMO associated with the Country</description>
        <inlineHelpText>Select the SMO associated with the Country</inlineHelpText>
        <label>SMO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMO</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_of_Service__c</fullName>
        <inlineHelpText>Select the Tier of Service associated with the Country (Gold, Silver or Bronze)</inlineHelpText>
        <label>Tier of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scorecard Input Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NA</fullName>
        <columns>SMO__c</columns>
        <columns>NAME</columns>
        <columns>Closing_Date_of_Scorecard__c</columns>
        <columns>Country__c</columns>
        <columns>Location__c</columns>
        <columns>AHT_seconds__c</columns>
        <columns>Email_Service_Level__c</columns>
        <columns>Phone_Answer_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <label>NA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>a-{0}</displayFormat>
        <label>Scorecard Input Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Input Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>